--- a/fortnite.html
+++ b/fortnite.html
@@ -39,9 +39,9 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-box">
+            <!-- <div class="search-box">
                 <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
-            </div>
+            </div> -->
         </div>
 
         </div>
@@ -56,6 +56,10 @@
         <div id="vm"></div>
         <div id="pr"></div>
         <div id="ram"></div>
+    </div>
+
+    <div id="voltar-games">
+        <a href="./games.html"> Voltar para montagem gamer</a>
     </div>
 
     <script src="./resources/js/fortnite.js"></script>
