--- a/montagem-medio.html
+++ b/montagem-medio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="./resources/css/montagem-media.css">
     <link rel="stylesheet" href="./resources/css/header.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -30,11 +32,9 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-box">
+            <!-- <div class="search-box">
                 <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
-            </div>
-        </div>
-
+            </div> -->
         </div>
     </header>
 
@@ -50,4 +50,5 @@
 
     <script src="./resources/js/montagem-media.js"></script>
 </body>
+
 </html>
