--- a/simulador.html
+++ b/simulador.html
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-box">
+            <!-- <div class="search-box">
                 <input type="text" id="pesquisa" class="search-txt" placeholder="  Pesquisar" name="Pesquisa"
                     list="searchComponents">
                 <datalist id="searchComponents">
@@ -46,7 +46,7 @@
                     <option value="Memória RAM"></option>
                     <option value="Armazenamento"></option>
                 </datalist>
-            </div>
+            </div> -->
         </div>
     </header>
 
