--- a/dota2.html
+++ b/dota2.html
@@ -37,9 +37,9 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-box">
+            <!-- <div class="search-box">
                 <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
-            </div>
+            </div> -->
         </div>
 
         </div>
@@ -53,6 +53,10 @@
         <div id="vm"></div>
         <div id="pr"></div>
         <div id="ram"></div>
+    </div>
+
+    <div id="voltar-games">
+        <a href="./games.html"> Voltar para montagem gamer</a>
     </div>
 
     <script src="./resources/js/dota2.js"></script>
