--- a/games.html
+++ b/games.html
@@ -36,9 +36,9 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-box">
+            <!-- <div class="search-box">
                 <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
-            </div>
+            </div> -->
         </div>
 
         </div>
@@ -52,8 +52,7 @@
         <div class="slider">
             <div class="slide">
                 <a href="fortnite.html">
-                    <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px"
-                        height="400px">
+                    <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
@@ -104,10 +103,12 @@
         </div>
     </div>
 
-    <img onclick="arrows.goRight()" id="right-arrow" src="./resources/images/right-arrow.png" alt="Seta para direita"
-        width="70px">
-    <img onclick="arrows.goLeft()" id="left-arrow" src="./resources/images/left-arrow.png" alt="Seta para esquerda"
-        width="70px">
+    <div id="setas-games">
+        <img onclick="arrows.goLeft()" id="arrow" src="./resources/images/left-arrow.png" alt="Seta para esquerda"
+            width="70px">
+        <img onclick="arrows.goRight()" id="arrow" src="./resources/images/right-arrow.png"
+            alt="Seta para direita" width="70px">
+    </div>
 
     <script src="./resources/js/games.js"></script>
 
