--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -24,7 +21,8 @@
             <a href="index.html"><img src="./resources/images/imagem-logo.png" alt="logo site"></a>
         </div>
         <div class="input-pesquisa">
-            <a href="simulador.html"><img id="simulador" src="./resources/images/simulador.png" alt="Simulador"></a>
+            <a class="container-simulador" href="simulador.html"><img id="simulador"
+                    src="./resources/images/simulador.png" alt="Simulador"></a>
             <nav class="menu">
                 <ul>
                     <li><img class="menu-img" src="./resources/images/menu-montagem.png" alt="Menu de montagem">
@@ -39,8 +37,9 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-box">
-                <input type="text" id="pesquisa" class="search-txt" placeholder="  Pesquisar" name="Pesquisa" list="searchComponents">
+            <!-- <div class="search-box">
+                <input type="text" id="pesquisa" class="search-txt" placeholder="  Pesquisar" name="Pesquisa"
+                    list="searchComponents">
                 <datalist id="searchComponents">
                     <option onclick="mbsearch()" id="MBsearch" value="Placa mãe"></option>
                     <option value="Placa de vídeo"></option>
@@ -48,9 +47,7 @@
                     <option value="Memória RAM"></option>
                     <option value="Armazenamento"></option>
                 </datalist>
-            </div>
-        </div>
-
+            </div> -->
         </div>
     </header>
 
@@ -66,13 +63,15 @@
                     <img src="./resources/images/imagem-slide1.svg" alt="Slide 1">
                 </div>
                 <div class="slide">
-                    <a href="./profissional-estudos.html"><img src="./resources/images/imagem-slide2.svg" alt="Slide 2"></a>                  
+                    <a href="./profissional-estudos.html"><img src="./resources/images/imagem-slide2.svg"
+                            alt="Slide 2"></a>
                 </div>
                 <div class="slide">
-                    <a href="./profissional-estudos.html"><img src="./resources/images/imagem-slide3.svg" alt="Slide 3"></a>                  
+                    <a href="./profissional-estudos.html"><img src="./resources/images/imagem-slide3.svg"
+                            alt="Slide 3"></a>
                 </div>
                 <div class="slide">
-                    <a href="./games.html"><img src="./resources/images/imagem-slide4.svg" alt="Slide 4"></a>                   
+                    <a href="./games.html"><img src="./resources/images/imagem-slide4.svg" alt="Slide 4"></a>
                 </div>
 
                 <div class="navigation-auto">
