--- a/montagem-basica.html
+++ b/montagem-basica.html
@@ -30,9 +30,9 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-box">
+            <!-- <div class="search-box">
                 <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
-            </div>
+            </div> -->
         </div>
 
         </div>
