--- a/fortnite.html
+++ b/fortnite.html
@@ -1,56 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fortnite</title>
 
-    <link rel="stylesheet" href="./resources/css/header.css">
     <link rel="stylesheet" href="./resources/css/fortnite.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-   
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
-<body>
-    <header>
-        
-        <div class="logo">
-            <a href="index.html"><img src="./resources/images/imagem-logo.png" alt="logo site"></a>
-        </div>
-        <div class="input-pesquisa">
-            <a href="simulador.html"><img id="simulador" src="./resources/images/simulador.png" alt="Simulador"></a>
-            <nav class="menu">
-                <ul>
-                    <li><img class="menu-img" src="./resources/images/menu-montagem.png" alt="Menu de montagem">
-                        <ul>
-                            <li>
-                                <a href="games.html">Montagem Gamer</a>
-                            </li>
-                            <li>
-                                <a href="profissional-estudos.html">Montagem Profissional <br>& Estudos</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-            <!-- <div class="search-box">
-                <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
-            </div> -->
-        </div>
 
-        </div>
-   
+<body>
+    <header id="header">
+        <script>
+            $(function () {
+                $("#header").load("header.html");
+            });
+        </script>
     </header>
 
     <h1>Requisitos mínimos para jogar Fortnite:</h1>
 
-    
+
     <div id="table">
         <div id="vb"></div>
         <div id="vm"></div>
@@ -64,4 +40,5 @@
 
     <script src="./resources/js/fortnite.js"></script>
 </body>
+
 </html>
