--- a/montagem-avancado.html
+++ b/montagem-avancado.html
@@ -7,35 +7,15 @@
     <title>Montagem Avançada</title>
 
     <link rel="stylesheet" href="./resources/css/montagem-avancada.css">
-    <link rel="stylesheet" href="./resources/css/header.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <a href="index.html"><img src="./resources/images/imagem-logo.png" alt="logo site"></a>
-        </div>
-        <div class="input-pesquisa">
-            <a href="simulador.html"><img id="simulador" src="./resources/images/simulador.png" alt="Simulador"></a>
-            <nav class="menu">
-                <ul>
-                    <li><img class="menu-img" src="./resources/images/menu-montagem.png" alt="Menu de montagem">
-                        <ul>
-                            <li>
-                                <a href="games.html">Montagem Gamer</a>
-                            </li>
-                            <li>
-                                <a href="profissional-estudos.html">Montagem Profissional <br>& Estudos</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-            <!-- <div class="search-box">
-                <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
-            </div> -->
-        </div>
-
-        </div>
+    <header id="header">
+        <script>
+            $(function () {
+                $("#header").load("header.html");
+            });
+        </script>
     </header>
 
     <h1>Montagem Avançada:</h1>
