bugfix: Total value in simulador and href in profissional-estudos

--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -36,7 +36,7 @@
                         geral, como o PDF.</p>
                 </div>
                 <div id="caixa">
-                    <h3 class="titulomedio">MÉDIO</h3>
+                    <h3>MÉDIO</h3>
                     <img class="medio" src="./resources/images/programaçao.png" width="300px" height="150px">
                     <input class="buttons" type="radio" id="medio" name="seleção" value="medio">
                     <label for="medio">Selecionar</label>
@@ -44,7 +44,7 @@
                         desenvolvimento em geral.</p>
                 </div>
                 <div id="caixa">
-                    <h3 class="tituloavançado">AVANÇADO</h3>
+                    <h3>AVANÇADO</h3>
                     <img class="avancado" src="./resources/images/editor-de-video.png" width="300px" height="150px">
                     <input class="buttons" type="radio" id="avançado" name="seleção" value="avançado">
                     <label for="avançado">Selecionar</label>
@@ -56,7 +56,7 @@
     </main>
     <div id="container-botao">
         <div id="warning"></div>
-        <a href="#" class="button" onclick="checkBasico(), checkMedio(), checkAvancado(), noCheck()">MONTAR</a>
+        <a class="button" onclick="checkBasico(), checkMedio(), checkAvancado(), noCheck()">MONTAR</a>
     </div>
     <script src="./resources/js/profissional-estudos.js"></script>
 </body>
