--- a/games.html
+++ b/games.html
@@ -83,12 +83,12 @@
         </div>
     </div>
 
-    <div id="setas-games">
-        <img onclick="arrows.goLeft()" id="arrow" src="./resources/images/left-arrow.png" alt="Seta para esquerda"
+    <!-- <div id="setas-games">
+        <img id="arrow-left" data-js="goLeft" src="./resources/images/left-arrow.png" alt="Seta para esquerda"
             width="70px">
-        <img onclick="arrows.goRight()" id="arrow" src="./resources/images/right-arrow.png"
+        <img id="arrow-right" data-js="goRight" src="./resources/images/right-arrow.png"
             alt="Seta para direita" width="70px">
-    </div>
+    </div> -->
 
     <script src="./resources/js/games.js"></script>
 
