--- a/simulador.html
+++ b/simulador.html
@@ -46,7 +46,8 @@
 
 
                 <div id="component">
-                    <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
+                    <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo" width="50px"
+                    height="50px">
                     <button id="replace_placa_video">Placa de vídeo</button>
                     <div id="placavideo" class="modal">
                         <div class="modal-content">
@@ -56,7 +57,8 @@
                 </div>
 
                 <div id="component">
-                    <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
+                    <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe" width="50px"
+                    height="50px">
                     <button id="replace_placa_mae">Placa Mãe</button>
                     <div id="placamae" class="modal">
                         <div class="modal-content">
@@ -66,7 +68,8 @@
                 </div>
 
                 <div id="component">
-                    <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
+                    <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM" width="50px"
+                    height="50px">
                     <button id="replace_ram">Memória RAM</button>
                     <div id="ram" class="modal">
                         <div class="modal-content">
@@ -76,7 +79,8 @@
                 </div>
 
                 <div id="component">
-                    <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
+                    <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD" width="50px"
+                    height="50px">
                     <button id="replace_hd">HD</button>
                     <div id="hd" class="modal">
                         <div class="modal-content">
@@ -86,7 +90,8 @@
                 </div>
 
                 <div id="component">
-                    <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
+                    <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD" width="50px"
+                    height="50px">
                     <button id="replace_ssd">SSD</button>
                     <div id="ssd" class="modal">
                         <div class="modal-content">
@@ -96,7 +101,8 @@
                 </div>
 
                 <div id="component">
-                    <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
+                    <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte" width="50px"
+                    height="50px">
                     <button id="replace_fonte">Fonte</button>
                     <div id="fonte" class="modal">
                         <div class="modal-content">
