--- a/games.html
+++ b/games.html
@@ -36,9 +36,9 @@
                 </a>
             </div>
             <div class="slide">
-                
-                <a href="gtav.html"><img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px"></a>
-                    
+                <a href="gtav.html">
+                    <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
+                </a>  
             </div>
             <div class="slide">
                 <a href="apex-legends.html">
