correcao de bugs montagem gamer

--- a/simulador.html
+++ b/simulador.html
@@ -123,7 +123,7 @@
 
         <section>
             <div id="montar-final">
-                <a href="#informacoes-extras" onclick="changeP()" id="botao-montar">Montar</a>
+                <a href="#informacoes-extras" onclick="changeP(), informationVisible ()" id="botao-montar">Montar</a>
             </div>
         </section>
 
