--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -54,8 +54,10 @@
             </div>
         </div>
     </main>
+    <div id="botao-warning">
+        <div id="warning">Marque uma opção!</div>
+    </div>
     <div id="container-botao">
-        <div id="warning"></div>
         <a class="button" onclick="checkBasico(), checkMedio(), checkAvancado(), noCheck()">MONTAR</a>
     </div>
     <script src="./resources/js/profissional-estudos.js"></script>
