--- a/montagem-avancado.html
+++ b/montagem-avancado.html
@@ -28,6 +28,10 @@
         <div id="stg"></div>
         <div id="pv"></div>
     </div>
+    
+    <div id="voltar-profissional">
+        <a href="./profissional-estudos.html"> Voltar para montagem profissional & estudos</a>
+    </div>
 
     <script src="./resources/js/montagem-avancada.js"></script>
 </body>
