--- a/montagem-basica.html
+++ b/montagem-basica.html
@@ -27,7 +27,11 @@
         <div id="mb"></div>
         <div id="stg"></div>
     </div>
-
+    
+    <div id="voltar-profissional">
+        <a href="./profissional-estudos.html"> Voltar para montagem profissional & estudos</a>
+    </div>
+    
     <script src="./resources/js/montagem-basica.js"></script>
 </body>
 </html>
