Added: voltar-profissional button

--- a/montagem-medio.html
+++ b/montagem-medio.html
@@ -30,7 +30,11 @@
         <div id="stg"></div>
         <div id="pv"></div>
     </div>
-
+    
+    <div id="voltar-profissional">
+        <a href="./profissional-estudos.html"> Voltar para montagem profissional & estudos</a>
+    </div>
+    
     <script src="./resources/js/montagem-media.js"></script>
 </body>
 
