--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -24,36 +24,44 @@
         </script>
     </header>
 
-    <main>
-        <div class="opcoes">
-            <div class="caixas">
-                <div id="caixa">
-                    <h3>BÁSICO</h3>
-                    <img class="basico" src="./resources/images/office.png" width="300px" height="150px">
+
+    <div class="opcoes">
+        <div class="caixas">
+            <div id="caixa">
+                <h3>BÁSICO</h3>
+                <img class="image" src="./resources/images/office.png" width="300px" height="150px">
+                <div id="radio-button">
                     <input class="buttons" type="radio" id="basico" name="seleção" value="basico">
                     <label for="basico">Selecionar</label>
-                    <p>Recomendado em uso de pacote Office (Excel, Word, Power Point, etc), navgador e extensões em
-                        geral, como o PDF.</p>
+
                 </div>
-                <div id="caixa">
-                    <h3>MÉDIO</h3>
-                    <img class="medio" src="./resources/images/programaçao.png" width="300px" height="150px">
+                <p>Recomendado em uso de pacote Office (Excel, Word, Power Point, etc), navgador e extensões em geral, como o PDF.</p>
+            </div>
+            <div id="caixa">
+                <h3>MÉDIO</h3>
+                <img class="image" src="./resources/images/programaçao.png" width="300px" height="150px">
+                <div id="radio-button">
                     <input class="buttons" type="radio" id="medio" name="seleção" value="medio">
                     <label for="medio">Selecionar</label>
-                    <p>Recomendado em uso de programação (C++, Java, JavaScript, etc), Photoshop e programas para
-                        desenvolvimento em geral.</p>
+
                 </div>
-                <div id="caixa">
-                    <h3>AVANÇADO</h3>
-                    <img class="avancado" src="./resources/images/editor-de-video.png" width="300px" height="150px">
+                <p>Recomendado em uso de programação (C++, Java, JavaScript, etc), Photoshop e programas para
+                    desenvolvimento em geral.</p>
+            </div>
+            <div id="caixa">
+                <h3>AVANÇADO</h3>
+                <img class="image" src="./resources/images/editor-de-video.png" width="300px" height="150px">
+                <div id="radio-button">
                     <input class="buttons" type="radio" id="avançado" name="seleção" value="avançado">
                     <label for="avançado">Selecionar</label>
-                    <p>Recomendado em programas de edições de vídeo (Sony Vegas, DaVinci Resolve, etc),
-                        processamento de imagem (CorelDraw, 3DSMax, etc).</p>
+
                 </div>
+                <p>Recomendado em programas de edições de vídeo (Sony Vegas, DaVinci Resolve, etc),
+                    processamento de imagem (CorelDraw, 3DSMax, etc).</p>
             </div>
         </div>
-    </main>
+    </div>
+
     <div id="botao-warning">
         <div id="warning">Marque uma opção!</div>
     </div>
