add: memslots compatibility

--- a/simulador.html
+++ b/simulador.html
@@ -76,6 +76,23 @@
                             <p><ul id="lista_ram" class="lista-simulador"></ul></p>
                         </div>
                     </div>
+                    <div id=qtd>
+                        <button id="minus-button" onclick="removeRam()">
+                            <p id = "minus-text">
+                                -
+                            </p>
+                        </button>
+
+                        <p id="qtdRam">
+                            0
+                        </p>
+    
+                        <button id="plus-button" onclick="addRam()">
+                            <p id = "plus-text">
+                                +
+                            </p>
+                        </button>
+                    </div>
                 </div>
 
                 <div id="component">
