--- a/games.html
+++ b/games.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script type = "text/javascript" src="./resources/js/gamesPage.js"></script>  
 </head>
 
 <body>
@@ -32,106 +31,108 @@
     <div class="slider">
         <div class="slider-track">
             <div class="slide">
-                <a onclick="goGamePage('Fortnite')">
+                <a href="fortnite.html">
                     <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('GTA V')">
+                <a href="gtav.html">
                     <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
                 </a>  
             </div>
             <div class="slide">
-                <a onclick="goGamePage('Apex Legends')">
+                <a href="apex-legends.html">
                     <img src="./resources/images/apex_legends.svg" alt="apex_legends" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('League of Legends')">
+                <a href="lol.html">
                     <img src="./resources/images/lol.svg" alt="lol" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('Valorant')">
+                <a href="valorant.html">
                     <img src="./resources/images/valorant.svg" alt="valorant" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('CS:GO')">
+                <a href="csgo.html">
                     <img src="./resources/images/cs_go.svg" alt="cs_go" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('Minecraft')">
+                <a href="minecraft.html">
                     <img src="./resources/images/minecraft.svg" alt="minecraft" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('FIFA 21')">
+                <a href="fifa21.html">
                     <img src="./resources/images/fifa_21.svg" alt="fifa_21" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('COD Warzone')">
+                <a href="warzone.html">
                     <img src="./resources/images/cod_warzone.svg" alt="cod_warzone" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('DOTA 2')">
+                <a href="dota2.html">
                     <img src="./resources/images/dota_2.svg" alt="dota_2" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('Fortnite')">
+                <a href="fortnite.html">
                     <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('GTA V')">
+                <a href="gtav.html">
                     <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
-                </a>  
+                </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('Apex Legends')">
+                <a href="apex-legends.html">
                     <img src="./resources/images/apex_legends.svg" alt="apex_legends" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('League of Legends')">
+                <a href="lol.html">
                     <img src="./resources/images/lol.svg" alt="lol" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('Valorant')">
+                <a href="valorant.html">
                     <img src="./resources/images/valorant.svg" alt="valorant" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('CS:GO')">
+                <a href="csgo.html">
                     <img src="./resources/images/cs_go.svg" alt="cs_go" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('Minecraft')">
+                <a href="minecraft.html">
                     <img src="./resources/images/minecraft.svg" alt="minecraft" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('FIFA 21')">
+                <a href="fifa21.html">
                     <img src="./resources/images/fifa_21.svg" alt="fifa_21" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('COD Warzone')">
+                <a href="warzone.html">
                     <img src="./resources/images/cod_warzone.svg" alt="cod_warzone" width="250px" height="400px">
                 </a>
             </div>
             <div class="slide">
-                <a onclick="goGamePage('DOTA 2')">
+                <a href="dota2.html">
                     <img src="./resources/images/dota_2.svg" alt="dota_2" width="250px" height="400px">
                 </a>
             </div>
         </div>
     </div>
+    <script src="./resources/js/games.js"></script>
 </body>
+
 </html>
