--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SetupMe</title>
 
     <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -62,6 +63,15 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div id="container-footer">
+            <p>Projeto realizado por Lucas Parreira Filgueiras, Victor Paiva da Silva Amaral, Ramon Elias da Costa e Maxsuel Matilde Marques.</p> 
+            <p>Elaborado por estudantes de Ciência da Computação do Centro Universitário Governador Ozanam Coelho (UNIFAGOC).</p> 
+            <p>Projeto englobando Redes, Organização de Computadores, Sistemas Operacionais e Estatística.</p> 
+            <p>Para mais informações consulte nosso repositório no GitHub através deste <a target="blank_" href="https://github.com/Gaspor/setupMe">link</a>.</p> 
+        </div>
+    </footer>
 
     <script src="resources/js/scripts.js"></script>
 </body>
