--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -8,6 +8,7 @@
     <title>Montagem profissional & estudos</title>
 
     <link rel="stylesheet" href="./resources/css/profissional-estudos.css">
+    <link rel="stylesheet" href="./resources/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -69,6 +70,7 @@
     <div id="container-botao">
         <a class="button" onclick="checkBasico(), checkMedio(), checkAvancado(), noCheck()">MONTAR</a>
     </div>
+
     <script src="./resources/js/profissional-estudos.js"></script>
 </body>
 
