--- a/simulador.html
+++ b/simulador.html
@@ -8,6 +8,7 @@
     <title>Simulador</title>
 
     <link rel="stylesheet" href="./resources/css/simulador.css">
+    <link rel="stylesheet" href="./resources/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -155,7 +156,6 @@
             </div>
         </section>
     </main>
-
     
     <script src="./resources/js/simulador.js"></script>
 </body>
