--- a/games.html
+++ b/games.html
@@ -8,6 +8,7 @@
     <title>Montagem Gamer</title>
 
     <link rel="stylesheet" href="./resources/css/games.css">
+    <link rel="stylesheet" href="./resources/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
