--- a/montagem-avancado.html
+++ b/montagem-avancado.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&amp;display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./resources/css/montagem-avancada.css">
+    <link rel="stylesheet" href="./resources/css/footer.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
