remove onclick in simulador

--- a/simulador.html
+++ b/simulador.html
@@ -8,6 +8,7 @@
     <title>Simulador</title>
 
     <link rel="stylesheet" href="./resources/css/simulador.css">
+    <link rel="stylesheet" href="./resources/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -36,7 +37,7 @@
                     <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px"
                         height="50px">
                     <button id="replace_processador">Processador</button>
-                        <div id="processador" onclick() class="modal">
+                        <div id="processador" class="modal">
                             <div class="modal-content">
                                     <p><ul id="lista_processador" class="lista-simulador"></ul></p> 
                                      
@@ -155,7 +156,6 @@
             </div>
         </section>
     </main>
-
     
     <script src="./resources/js/simulador.js"></script>
 </body>
